# bass-superpixels

./: LICENSE  README.md
code/: CMakeLists.txt  Tools.cpp  bass.cpp
code/include/: CaffeCls.hpp  chnsFunctions.h  config.h  dbFeature.hpp  edgeBoxes.h  edgesDetect.h  edgesNms.h  imagehelper.hpp  math_sse.hpp  model.h  person_craft.h  structureEdge.h
code/include/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe_pb2.py
code/src/: CMakeLists.txt  FastRCNN.cpp  Makefile  SceneFeatures.cpp  chnsFunctions.cpp  cmake_install.cmake  edgeBoxes.cpp  edgesDetect.cpp  edgesNms.cpp  math_sse.cpp  model.cpp  structureEdge.cpp
code/src/edge2box_qt/: edge2box_qt.pro  main.cpp  test.cpp  test.hpp
